--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -1252,7 +1252,7 @@ $navbar-light-brand-hover-color: $navbar-light-active-color !default;
 // scss-docs-end navbar-variables
 
 // scss-docs-start navbar-dark-variables
-$navbar-dark-color: rgba($white, 0.55) !default;
+$navbar-dark-color: #ffffff !default;
 $navbar-dark-hover-color: rgba($white, 0.75) !default;
 $navbar-dark-active-color: $white !default;
 $navbar-dark-disabled-color: rgba($white, 0.25) !default;
